[tool.poetry]
name = "14-data-visualization"
version = "0.1.0"
description = ""
authors = ["vorSherer <tcpma2011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-watch = "^4.2.0"
jupyterlab = "^2.2.0"
numpy = "^1.19.0"
matplotlib = "^3.2.2"
pandas = "^1.0.5"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
